# spark-application-analyzer

./: .gitignore  Makefile  README.md  config.yaml.example  pyproject.toml  requirements.txt  setup_dev.py
examples/: README.md  example.py  executor_idle_report.csv  metrics_run_logs.sql  spark_application_metrics.sql
spark_application_analyzer/: __init__.py  analyzer_service.py  api.py  argparse_cli.py  cli.py  mcp_server.py
spark_application_analyzer/analytics/: base.py  bottleneck.py  executors.py  memory.py  memory_stats.py  required_executors.py
spark_application_analyzer/collectors/: datasource.py  spark_history.py
spark_application_analyzer/config/: tshirt_profiles.py
spark_application_analyzer/models/: executor_metrics.py  job_metrics.py  recommendation.py  stage_metrics.py
spark_application_analyzer/storage/: arrow_io.py  datasink.py
spark_application_analyzer/utils/: aws.py  cli_colors.py  conversions.py  logging.py
tests/: __init__.py  test_basic.py
